# BioRT-HBV

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md  build.bat  build.sh
.github/ISSUE_TEMPLATE/: bug_report.md
cvode/: CMakeLists.txt
input/: Example_reaction_results.txt  StreamObs_DOCDIC_20162017_W9_SleepersRiver.csv
input/Carbon_Base/: precipchem.txt  soil.txt
input/Carbon_W9_SleepersRiver/: Numexp_Results.txt  cdbs.txt  chem.txt  cini.txt
input/Example_Konza_new/: cdbs.txt  chem.txt  cini.txt  precipchem.txt  soil.txt
input/Example_reaction/: Parameter.xml
input/Konza/: Numexp_Results.txt  Numexp_precipchem.txt  Parameter.xml  Results.txt  cdbs.txt  chem.txt  cini.txt  precipchem.txt  soil.txt
input/Konza/Norrsjon_SOCreaction/: Results.txt  cdbs.txt
input/Konza_surface_Q0reaction/: chem.txt  cini.txt  precipchem.txt  soil.txt
input/Nitrogen_Base/: Parameter.xml  cdbs.txt  chem.txt  cini.txt  precipchem.txt
input/Nitrogen_W9_SleepersRiver/: cdbs.txt  chem.txt  cini.txt  precipchem.txt  soil.txt
input/Norrsjon_SOCreaction/: chem.txt  cini.txt  soil.txt
input/sleeper_cl_hydrology_dif_numexp/: Numexp_Results.txt  Numexp_precipchem.txt  Parameter.xml  Results.txt  cdbs.txt  chem.txt  cini.txt  soil.txt
input/sleeper_cl_hydrology_rep_numexp/: Numexp_precipchem.txt  chem.txt  precipchem.txt  soil.txt
src/: CMakeLists.txt  custom_io.c  init.c  lookup.c  main.c  print.c  react.c  read_chem.c  read_cini.c  read_hbv.c  read_param.c  read_precipchem.c  read_soil.c  set_numexp.c  speciation.c  time_func.c  transpt.c  util_func.c
src/include/: biort.h  custom_io.h
